--- a/css/style.css
+++ b/css/style.css
@@ -1089,6 +1089,7 @@ header .hidden-list ul li a i {
     display: block;
     background-color: var(--main-color);
     height: 100%;
+    transition: width 1s;
 }
 
 .skills .bars .skill .bar::after {
@@ -1989,3 +1990,24 @@ footer .made i {
     margin-left: 5px;
 }
 /* end footer */
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ddd;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 170, 255, 50%);
+    border-radius: 10px;
+    height: 150px;
+    opacity: 50%;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 170, 255);
+}
+/* scrollbar */
